--- a/package.json
+++ b/package.json
@@ -1,36 +1,25 @@
 {
-  "engines": {
-    "composer": "^0.19.12"
-  },
-  "name": "airline",
+  "name": "airlinev9",
   "version": "0.0.1",
-  "description": "ACME Airline Case Study",
+  "description": "Incremental creation of the ACME model",
   "scripts": {
-    "prepublish": "mkdirp ./dist && composer archive create --sourceType dir --sourceName . -a ./dist/airline.bna",
-    "pretest": "npm run lint",
-    "lint": "eslint .",
-    "test": "nyc mocha -t 0 test/*.js && cucumber-js"
+    "test": "mocha --recursive"
   },
-  "keywords": [
-    "composer",
-    "composer-network"
-  ],
   "author": "Haan",
   "email": "imaginejhm@gmail.com",
   "license": "Apache-2.0",
   "devDependencies": {
-    "composer-admin": "^0.19.12",
-    "composer-cli": "^0.19.12",
-    "composer-client": "^0.19.12",
-    "composer-common": "^0.19.12",
-    "composer-connector-embedded": "^0.19.12",
-    "composer-cucumber-steps": "^0.19.12",
+    "composer-admin": "latest",
+    "composer-client": "latest",
+    "composer-connector-embedded": "latest",
+    "browserfs": "latest",
     "chai": "latest",
-    "chai-as-promised": "latest",
-    "cucumber": "^2.2.0",
     "eslint": "latest",
-    "nyc": "latest",
+    "istanbul": "latest",
     "mkdirp": "latest",
     "mocha": "latest"
+  },
+  "dependencies": {
+    "chai": "^4.1.2"
   }
 }
